[tool.poetry]
name = "ssh-keyservice-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.8"}
cryptography = "^44.0.1"
fastapi-azure-auth = "^5.0.1"
pydantic = "^2.10.6"
pydantic-settings = "^2.7.1"
cachetools = "^5.5.1"
azure-identity = "^1.23.1"
azure-keyvault-secrets = "^4.9.0"
sqlmodel = "^0.0.22"
psycopg2 = "^2.9.10"
azure-monitor-opentelemetry = "^1.7.0"
uvicorn = "^0.34.0"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"

[tool.poetry-auto-export]
output = "requirements.txt"
without_hashes = true
without = ["dev"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
