[tool.poetry]
name = "ssh-keyservice-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.124.0"}
cryptography = "^46.0.3"
fastapi-azure-auth = "^5.2.0"
pydantic = "^2.12.5"
pydantic-settings = "^2.11.0"
cachetools = "^6.2.1"
azure-identity = "^1.25.1"
azure-keyvault-secrets = "^4.9.0"
sqlmodel = "^0.0.27"
azure-monitor-opentelemetry = "^1.8.0"
uvicorn = "^0.38.0"
psycopg2-binary = "^2.9.11"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.2.1"

[tool.poetry-auto-export]
output = "requirements.txt"
without_hashes = true
without = ["dev"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
